--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Troy | 唐锐</title>
+	<meta name="viewport" content="initial-scale=1;width=device-width">
+	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1>Welcome to my space</h1>
+	<h1 class="slogan">Welcome to my space</h1>
+	<script src="bundle.js"></script>
 </body>
 </html>
