--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
-	<h1 class="slogan">Welcome to my space</h1>
+	<article class="main">
+		<h1>About Me</h1>
+		<p>Hi, I'm Troy(唐锐). I'm a frontend developer, gym lover and NBA enthusias currently residing in beautiful ShangHai, China.</p>
+		<p>I'm currently working on Wallstreetcn.com</p>
+		<a href="mailto://ruitang307@gmail.com" class="mailme">GET IN TOUCH</a>
+	</article>
 	<script src="bundle.js"></script>
 </body>
 </html>
