added underline animation

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Troy | 唐锐</title>
-	<meta name="viewport" content="initial-scale=1;width=device-width">
+	<meta name="viewport" content="initial-scale=1,width=device-width">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<article class="main">
-		<h1>About Me</h1>
-		<p>Hi, I'm Troy(唐锐). I'm a frontend developer, gym lover and NBA enthusiast currently residing in beautiful ShangHai, China.</p>
+		<h1 class="underline-animation">About Me</h1>
+		<p>Hi, I'm Troy( <strong class="underline-animation"> 唐锐 </strong> ). I'm a frontend developer, gym lover and NBA enthusiast currently residing in beautiful ShangHai, China.</p>
 		<p>I'm currently working on Wallstreetcn.com</p>
 		<a href="mailto://ruitang307@gmail.com" class="mailme">GET IN TOUCH</a>
 	</article>
