--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 		<h1 class="underline-animation">About Me</h1>
 		<p>Hi, I'm Troy( <strong class="underline-animation"> 唐锐 </strong> ). I'm a frontend developer, gym lover and NBA enthusiast currently residing in beautiful ShangHai, China.</p>
 		<p>I'm currently working on Wallstreetcn.com</p>
-		<a href="mailto://ruitang307@gmail.com" class="mailme">GET IN TOUCH</a>
+		<a href="mailto://ruitang307@gmail.com" class="btn">GET IN TOUCH</a>
+		<a href="http://tangrui.win/blog" class="btn">BLOG</a>
 	</article>
 	<script src="bundle.js"></script>
 </body>
