--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Troy | 唐锐</title>
-	<meta name="viewport" content="initial-scale=1,width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 	<article class="main">
 		<h1 class="underline-animation">About Me</h1>
-		<p>Hi, I'm Troy( <strong class="underline-animation"> 唐锐 </strong> ). I'm a frontend developer, gym lover and NBA enthusiast currently residing in beautiful ShangHai, China.</p>
-		<p>I'm currently working on Wallstreetcn.com</p>
-		<a href="mailto://ruitang307@gmail.com" class="btn">GET IN TOUCH</a>
+		<p>Hi, I'm Troy( <strong class="underline-animation"> 唐锐 </strong> ). I'm a Frontend Engineer, gym lover and NBA enthusiast currently residing in beautiful ShangHai, China.</p>
+		<p>I'm currently working on <a class="underline-animation" href="https://wallstreetcn.com" target="blank" rel="noopener noreferrer">Wallstreetcn.com</a></p>
+		<a href="https://github.com/troywith77" class="btn">GET IN TOUCH</a>
 		<a href="http://tangrui.win/blog" class="btn">BLOG</a>
 	</article>
 	<script src="bundle.js"></script>
